<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bound_00_5dp"
    android:paddingTop="12dp"
    android:paddingBottom="18dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center"
        android:layout_marginBottom="12dp"
        android:text="目标IMSI"/>

    <EditText
        android:id="@+id/et_add_imsi"
        style="@style/dialog_edit"
        android:singleLine="true"
        android:digits="@string/number_rule"
        android:maxLength="15"
        android:hint="请输入IMSI"
        android:inputType="number"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_close_imsi"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_add_imsi"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="88dp"
            android:text="@string/save"
            android:layout_marginStart="18dp"/>

    </LinearLayout>
</LinearLayout>