<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:alpha="0.9"
    android:background="@color/black"
    android:paddingTop="12dp"
    android:paddingBottom="18dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:gravity="center"
        android:text="电信主频"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/et_ctc_fcn"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:singleLine="true"
        android:maxLength="5"
        android:background="@drawable/common_edit_text_bkg"
        android:digits="@string/number_rule"
        android:layout_marginRight="5dp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="13sp"
        android:hint="电信定位B3频点"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel_fcn"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btn_change_fcn"
            android:layout_height="36dp"
            android:textColor="@color/darkorange"
            android:background="@drawable/common_button_bkg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="18dp"
            android:text="@string/save" />


    </LinearLayout>
</LinearLayout>