<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dimgrey" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/power_control"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_power_level"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/radio_group_bkg"
            android:orientation="horizontal"
            android:paddingStart="6dp"
            android:paddingEnd="6dp">

            <RadioButton
                android:id="@+id/rb_power_high"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="@drawable/radio_button_selectot"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="高"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_power_medium"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:background="@drawable/radio_button_selectot"
                android:button="@null"
                android:gravity="center"
                android:text="中"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/rb_power_low"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:background="@drawable/radio_button_selectot"
                android:button="@null"
                android:gravity="center"
                android:text="低"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="60dp"
            android:layout_height="0.6dp"
            android:background="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.6dp"
            android:layout_weight="1"
            android:background="@color/dimgrey" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_rf_switch"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_rf_switch"
            android:layout_width="54dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/rf_switch_style"
            android:button="@null" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/dimgrey" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_2g_params"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dimgrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btn_set_param"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:background="@drawable/common_button_bkg"
                android:text="参数配置"
                android:textColor="@color/darkorange"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_refresh_param"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/common_button_bkg"
                android:text="@string/lable_refresh_param"
                android:textColor="@color/darkorange"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_reboot_device"
                android:layout_width="100dp"
                android:layout_height="34dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/common_button_bkg"
                android:text="@string/lable_reboot"
                android:textColor="@color/darkorange"
                android:textSize="14sp" />

        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:gravity="center"-->
<!--            android:layout_marginTop="10dp">-->

<!--            <Button-->
<!--                android:id="@+id/btn_reboot_device"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="34dp"-->
<!--                android:background="@drawable/common_button_bkg"-->
<!--                android:text="@string/lable_reboot"-->
<!--                android:textColor="@color/darkorange"-->
<!--                android:textSize="14sp" />-->

<!--            <Button-->
<!--                android:id="@+id/btn_send_sms"-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="34dp"-->
<!--                android:layout_marginLeft="50dp"-->
<!--                android:background="@drawable/common_button_bkg"-->
<!--                android:text="发送短信"-->
<!--                android:textColor="@color/darkorange"-->
<!--                android:textSize="14sp" />-->
<!--        </LinearLayout>-->

    </LinearLayout>
</LinearLayout>